# rubiks-cube

./: .gitignore  .pre-commit-config.yaml  README.md  ci_test.py  constants.py  cube.py  cube_plotter.py  cube_scanner.py  cube_utils.py  dominant_colour.py  gui.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/rubiks_cube/: __init__.py  colour_calibration.py  constants.py  cube.py  cube_plotter.py  cube_scanner.py  cube_utils.py  dominant_colour.py  gui.py  main.py  plotter_utils.py  scanner_utils.py
tests/: ci_test.py  test_cube.py  test_cube_utils.py
