[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rubiks-cube"
version = "0.0.1"
description = "Rubik's cube tools (scanner, GUI, solver)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sean Robinson" }]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.7",
  "Pillow>=10.0",
  "matplotlib>=3.7"
]

[project.scripts]
rubiks-cube = "rubiks_cube.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rubiks_cube*"]